--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,6 +1,6 @@
 body {
     margin:0;
-    font-family: fantasy;  
+    font-family: Arial, Helvetica, sans-serif;  
     margin-top: 38px;
     background-color: rgb(255, 255, 255);
 
@@ -15,6 +15,7 @@ ul {
   position: fixed;
   top: 0;
   width: 100%;
+
   
 }
 
@@ -42,7 +43,10 @@ li a:hover:not(.active) {
 }
 
 .contenido{
-  margin: 10%;
+  padding:50px;
+  margin-top:50px;
+
+  height:1500px;
 }
 .img-menu{
     margin-top: 10px;
@@ -52,31 +56,98 @@ li a:hover:not(.active) {
 
 
 h1{
-  font-weight: bold;
-  font-size:70px;
+  text-align: center;
+  font-size:50px;
+  color:#1f618d;
+}
+h2{
+  text-align: center;
+  font-size:30px;
   color:#1f618d;
 }
 
 p{
-  font-size:30px;
+  font-size:15px;
   color:#1f618d;
 }
 
 footer{
   color: beige;
   background-color: #1f618d;
-height: 3%;  
+  height: 3%;  
+  display: block;
 }
-.box{
-  float: left;
-  height: 200px;
-  width: 28%;
-  margin-left: 4%;
+
+.box1 {
+  margin-top: 3%;
+  float: right;
+  text-align: center;
   border-radius: 15px;
-  border-width: 10px;
+  width: 45%;
+  padding: 6px;
+  margin: 2%;
+  height: 85%;
+}
+.section-box1{
+  width: 100%;
+  height: 30%;
+  box-shadow: 0 0 1em rgba(194, 194, 194, 0.815);
+  border-radius: 15px;
+  border: 1px solid rgba(194, 194, 194, 0.815);
+
+}
+
+.section-box1{
+  width: 100%;
+  height: 30%;
+
+}
+.section-box2{
+  margin-top: 2%;
+  width: 100%;
+  height: 30%;
+  box-shadow: 0 0 1em rgba(238, 238, 238, 0.582);
+  border-radius: 15px;
+  border: 1px solid rgba(194, 194, 194, 0.815);
+
+}
+
+.p-box1{
+  padding-right: 10px;
+  text-align: justify;
+  font-size: 20px;
+  display: block;
+}
+.img-box1{
+width: 100%;
+border-radius: 5px;
+height: 100%;
+
+}.box {
+  float: left;
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0 0 1em rgba(194, 194, 194, 0.815);
+  width: 28%;
+  border: 1px solid rgba(194, 194, 194, 0.815);
+  padding: 6px;
+  margin: 2%;
+
+}
+
+
+.img-box{
+width: 100%;
+border-radius: 5px;
+
+}
+
+button{
+  border-radius: 6px;
   border-color: #FFC300;
-  border-style: solid;
-  border-width: 5px;
-
-
+  background-color:#FFC300;
+  padding: 10px;
+  width: 80px;
+  color: #1f618d;;
+  
 }
