--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -3,7 +3,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;  
     margin-top: 38px;
     background-color: rgb(255, 255, 255);
-
+    position: inherit;
+    min-height: 100%;
     }
 
 ul {
@@ -19,6 +20,9 @@ ul {
   
 }
 
+a{
+	text-decoration-line: none;
+	color:#FFC300}
 li {
   float: right;
 }
@@ -45,9 +49,15 @@ li a:hover:not(.active) {
 .contenido{
   padding:50px;
   margin-top:50px;
-
   height:1500px;
 }
+
+.contenido-link{
+  padding:50px;
+  margin-top:50px;
+  height:500px;
+}
+
 .img-menu{
     margin-top: 10px;
     width: 160px;
@@ -65,18 +75,14 @@ h2{
   font-size:30px;
   color:#1f618d;
 }
-
-p{
-  font-size:15px;
+h3{
+  text-align: justify;
+  font-size:18px;
   color:#1f618d;
 }
 
-footer{
-  color: beige;
-  background-color: #1f618d;
-  height: 3%;  
-  display: block;
-}
+
+
 
 .box1 {
   margin-top: 3%;
@@ -97,7 +103,16 @@ footer{
 
 }
 
-.section-box1{
+.section-box-link{
+  width: 100%;
+  height: 70%;
+  box-shadow: 0 0 1em rgba(194, 194, 194, 0.815);
+  border-radius: 15px;
+  border: 1px solid rgba(194, 194, 194, 0.815);
+
+}
+
+.section-box{
   width: 100%;
   height: 30%;
 
@@ -105,18 +120,33 @@ footer{
 .section-box2{
   margin-top: 2%;
   width: 100%;
-  height: 30%;
-  box-shadow: 0 0 1em rgba(238, 238, 238, 0.582);
+  height: 33%;
+  box-shadow: 0 0 1em rgba(194, 194, 194, 0.815);
   border-radius: 15px;
   border: 1px solid rgba(194, 194, 194, 0.815);
 
 }
 
+.section-box2:hover{
+  box-shadow: 0 0 1em rgba(165, 150, 11, 0.582);
+  border: 1px solid rgba(247, 210, 0, 0.815);
+
+}
+
+.section-box1:hover{
+  box-shadow: 0 0 1em rgba(165, 150, 11, 0.582);
+  border: 1px solid rgba(247, 210, 0, 0.815);
+
+}
+
+
 .p-box1{
-  padding-right: 10px;
+  padding-right: 15px;
   text-align: justify;
-  font-size: 20px;
+  font-size: 17px;
   display: block;
+  margin: 20;
+  color: #1f618d;
 }
 .img-box1{
 width: 100%;
@@ -139,15 +169,115 @@ height: 100%;
 .img-box{
 width: 100%;
 border-radius: 5px;
+height: 236px;
 
 }
 
 button{
-  border-radius: 6px;
-  border-color: #FFC300;
-  background-color:#FFC300;
+  border-radius: 9px;
+  border: 2px solid#FFC300;;
   padding: 10px;
-  width: 80px;
-  color: #1f618d;;
+  width: 95px;
+  color: #1f618d;
+  background-color: white;
   
+}
+
+button:hover{
+  box-shadow: 0 0 1em rgba(221, 174, 19, 0.815);
+  width: 100px;
+
+
+}
+
+footer{
+  color: beige;
+  background-color: #1f618d;
+  padding-top: 10;
+  padding-bottom: 100px;
+
+}
+.pFooter{
+  padding-top: 35px;
+  padding-left: 50px;
+  color: azure;
+  padding-right: 15px;
+  text-align: justify;
+  font-size: 20px;
+  display: block;
+  margin: auto;
+  font-weight: bold;
+}
+
+.redes{
+  padding-top: 20px;
+  padding-right: 30px;
+  float: right;
+}
+
+.div-p{
+  float: left;
+}
+
+.fa {
+  padding: 15px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  color: #3B5998;
+  background: white;
+}
+
+.fa-twitter {
+  color: #55ACEE;
+  background: white;
+}
+
+.fa-google {
+  color: #dd4b39;
+  background: white;
+}
+
+.fa-linkedin {
+  color: #007bb5;
+  background: white;
+}
+
+.fa-youtube {
+  background:white;
+  color:#bb0000;
+}
+
+.fa-instagram {
+  color: #125688;
+  background: white;
+}
+
+
+
+.fa-skype {
+  color: #00aff0;
+  background: white;
+}
+
+
+
+.fa-reddit {
+  color: #ff5700;
+  background: white;
+}
+
+.fa-rss {
+  color: #ff6600;
+  background: white;
 }
